-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for James Simmons <uja.ornl@gmail.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/ce66c273-b92f-413b-91bb-7fe4aa5b5136
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/117555 - 5.14.0-503.40.1.el9_5.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/117555 - 5.14.0-503.40.1_lustre.el9.x86_64
<<Please provide additional information about the failure here>>
Lustre: DEBUG MARKER: /usr/sbin/lctl mark == sanity-lfsck test 6b: LFSCK resumes from last checkpoint (2) ========================================================== 19:30:58 (1760643058)
[ 4472.483843] Lustre: DEBUG MARKER: == sanity-lfsck test 6b: LFSCK resumes from last checkpoint (2) ========================================================== 19:30:58 (1760643058)
[ 4473.076408] Lustre: DEBUG MARKER: /usr/sbin/lctl set_param fail_val=1 fail_loc=0x1601
[ 4473.365669] Lustre: DEBUG MARKER: /usr/sbin/lctl lfsck_start -M lustre-MDT0000 -t namespace -r
[ 4473.648251] Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace
[ 4478.951541] Lustre: DEBUG MARKER: /usr/sbin/lctl set_param fail_loc=0x80001609
[ 4479.265626] Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_namespace |
awk '/^status/
'
[ 4479.660282] LustreError: 235518:0:(lfsck_engine.c:1607:lfsck_assistant_engine()) ASSERTION( lad->lad_post_result > 0 ) failed:
[ 4479.660544] LustreError: 235518:0:(lfsck_engine.c:1607:lfsck_assistant_engine()) LBUG
[ 4479.660687] CPU: 1 PID: 235518 Comm: lfsck_namespace Kdump: loaded Tainted: G OE ------- — 5.14.0-503.40.1_lustre.el9.x86_64 #1
[ 4479.660836] Hardware name: Red Hat KVM, BIOS 1.16.3-2.el9_5.1 04/01/2014
[ 4479.660979] Call Trace:
[ 4479.661154] <TASK>
[ 4479.661317] dump_stack_lvl+0x34/0x48
[ 4479.661478] lbug_with_loc.cold+0x5/0x43 [lnet]
[ 4479.661722] lfsck_assistant_engine+0x14e0/0x16a0 [lfsck]
[ 4479.661919] ? srso_alias_return_thunk+0x5/0xfbef5
[ 4479.662076] ? __pfx_var_wake_function+0x10/0x10
[ 4479.662216] ? __pfx_lfsck_assistant_engine+0x10/0x10 [lfsck]
[ 4479.662388] kthread+0xdd/0x100