LU-19505 lfsck: don't set LAD_TO_POST if <= 0

lad_post_generic() shouldn't set LAD_TO_POST if *result <= 0, which
means assistant thread failed or is stopped, otherwise it may trigger
assertion in lfsck_assistant_engine() because the assistant thread
shouldn't do post work upon failure.

Fixes: 2b5df830d ("LU-19370 lfsck: don't use ptlrpc_thread for LFSCK")
Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I19dd04be35430ece1920d7eb1770f53cfa588d90
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62019
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>